hide overflow to prevent scrollbars on hover animation

--- a/css/theme/source/zuehlke-index.scss
+++ b/css/theme/source/zuehlke-index.scss
@@ -32,6 +32,7 @@ body {
   min-height: 100vh;
   margin: 0;
   padding: $minLogoSize + $mainMargin $mainMargin 0;
+  overflow: hidden;
 
   &::before {
     content: ' ';
